<resources>
    <string name="app_name">Khamelea</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="loginpassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="noAccount">Do not have an account? Tap to Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_users">UsersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>